[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Enemies/Friendly Mon/Jello_slime.png" type="Texture2D" id=1]
[ext_resource path="res://Objects/Enemies/Friendly Mon/Jello_slime-bounce.png" type="Texture2D" id=2]
[ext_resource path="res://Scripts/Entities/Friendly_Monster.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 1.5 )

[sub_resource type="Animation" id=2]
resource_name = "Bounce"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Col:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.65, 0.8, 1, 1.2, 1.25 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -5.5, -6.5, -5.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -4.5, -6.5, -4.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -3.5, -6.5, -3.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -2.5, -6.5, -2.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -3.5, -6.5, -3.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -4.5, -6.5, -4.5, -9.5, 0.5, -9.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.25 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:boing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 1.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 1.2 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "boing_true"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Def"
tracks/0/type = "value"
tracks/0/path = NodePath("Col:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -5.5, -6.5, -5.5, -9.5, 0.5, -9.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 4.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 4, 4.1, 4.2, 4.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:boing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Col:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -5.5, -6.5, -5.5, -9.5, 0.5, -9.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:boing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Bounce"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Col:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.65, 0.8, 1, 1.2, 1.25 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -5.5, -6.5, -5.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -4.5, -6.5, -4.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -3.5, -6.5, -3.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -2.5, -6.5, -2.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -3.5, -6.5, -3.5, -9.5, 0.5, -9.5, 3.5 ), PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -4.5, -6.5, -4.5, -9.5, 0.5, -9.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.25 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:boing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 1.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 1.2 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "boing_true"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Def"
tracks/0/type = "value"
tracks/0/path = NodePath("Col:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -5.5, -6.5, -5.5, -9.5, 0.5, -9.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 4.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 4, 4.1, 4.2, 4.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Col:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -5.5, -6.5, -5.5, -9.5, 0.5, -9.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:boing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Memory_Mon" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 32
script = ExtResource( 4 )
boing = true

[node name="Col" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.5, -0.5 )
polygon = PackedVector2Array( -7.5, 5.5, 5.5, 5.5, 7.5, 3.5, 7.5, 0.5, 4.5, -5.5, -6.5, -5.5, -9.5, 0.5, -9.5, 3.5 )

[node name="Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 1 )

[node name="L_Jump_cast" type="RayCast2D" parent="."]
position = Vector2( -7, 5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="R_Jump_cast" type="RayCast2D" parent="."]
position = Vector2( 6, 5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="M_Jump_cast" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, -6.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 2 )
anims/Def = SubResource( 3 )
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 6 )
anims/Def = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer_animation_finished"]
